ncc/testsuite/negative/parser.n

module Test1 {
  doo () : void {
    _ = Hoo (bla, bla; // E: when parsing this `\(' brace group
    Trata (tututu); 
  } // E: unexpected closing bracket `}'
}

module M {
  public boo () : void {
    match (2) {
      | _ =>
        ()
        _ = 34; // E: expected `;'
    }
  }

  public baa () : void {
    match () {  // E: .*expecting non-empty `\(\.\.\)' after `match'
      | _ => ()
    }
  }

  faa () : void {
    match (3) {
      | 1 =>     // E: match case body cannot be empty
      | _ => {}
    }
  }
  
}

